2005-01-01  Luc Pionchon  <luc@handhelds.org>

	* configure.c (create_pageSetup): remove markup from i18n'ed strings

2005-01-01  Phil Blundell  <philb@gnu.org>

	* Version 0.34 released.

2005-01-01  Phil Blundell  <philb@gnu.org>

	Rewrite layout parser to use GMarkup rather than libxml2 DOM API:
	* structure.c (new_element): New.
	(xml_parser_start_element): Likewise.
	(xml_parser_end_element): Likewise.
	(xml_parser_text): Likewise.
	(free_ctx): Likewise.
	(read_structure): Reimplement using GMarkupParser and above
	functions.
	(structure_parse_xml_item): Deleted.
	(structure_parse_xml_group): Likewise.
	(structure_parse_xml_page): Likewise.
	(structure_parse_xml): Likewise.
	* Makefile (PACKAGE_CFLAGS): Remove libxml2 flags.
	(PACKAGE_LDFLAGS): Likewise.

2004-11-25  Florian Boor <florian.boor@kernelconcepts.de>

    * structure.c (load_well_known_tags): Make sure all tags are uppercase.
    * db.c: New functions (db_check_tags, check_one_tag) to make sure all
            tags are upercase.
    * finddlg.c, finddlg.h, db.c, db.h, main.c: Applied patch to speed up 
                                                search using SQL. Thanks
                                                to Christian Gillot for this.
            
2004-11-18  Phil Blundell  <philb@gnu.org>

	* Version 0.33 released.

2004-11-14  Phil Blundell  <pb@nexus.co.uk>

	* editing.c (pop_singles): Set expand=FALSE when packing table
	into vbox.

	* db.c (db_get_config_tag): Avoid segfault if query returns no data.

2004-11-07  Phil Blundell  <pb@nexus.co.uk>

	* Makefile (LINGUAS): Add fr, zh_CN.
	* po/ru.po: Updated, courtesy Pavel Maryanov.
	* po/zh_CN.po: New file, courtesy Meng Jie.
	* po/fr.po: New file, courtesy Luc Pionchon.

2004-10-25  Florian Boor <florian.boor@kernelconcepts.de>

    * main.c (create_main): Changed tree selection mode to make sure that a
                            contact is selected all the time.

2004-10-24  Florian Boor <florian.boor@kernelconcepts.de>
