@@ -1,3 +1,8 @@
+2005-02-08  Florian Boor <florian.boor@kernelconcepts.de>
+
+	* main.c: Show contact details on doubleclick on the contact list
+                  in portrait mode. 
+
 2005-01-01  Luc Pionchon  <luc@handhelds.org>
 
 	* configure.c (create_pageSetup): remove markup from i18n'ed strings
